Add GIF of full useage and updated content

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +21,7 @@
         My Notes
       </a>
       <a class="navbar-brand" target="_blank" href="https://github.com/ErikPlachta/node-express-notes-app">
-        Erik Plachta | <i>Checkout my GitHub</i>
+        <b>Erik Plachta | <i>Checkout my GitHub</i></b>
       </a>
     </nav>
     <div class="container">
