--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -4,13 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>My Notes</title>
-    <!-- FAV ICONS -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <!-- Stylesheets -->
+    <title>Note Taker</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css"
@@ -26,14 +20,7 @@
 
   <body>
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="/">
-        <img src="assets/images/favicon-32x32.png">
-         My Notes - Home
-      </a>
-      <a class="navbar-brand" target="_blank" href="https://github.com/ErikPlachta/node-express-notes-app">
-        Erik Plachta | <i>Checkout my GitHub</i>
-      </a>
-      <!-- Save and Add New -->
+      <a class="navbar-brand" href="/">Note Taker </a>
       <div class="icons">
         <i class="fas fa-save text-light save-note"></i>
         <i class="fas fa-plus text-light new-note"></i>
